# spectcl

main/: Makefile.am
main/DisplayInterface/: TestProcess.cpp  TestProcess.h
main/Filter/: CFilterBufferDecoderTests.cpp  Makefile.am  TestRunner.cpp
main/SpecTcl/: Makefile.am  SpectrumPackageTests.cpp
main/Spectra/: Makefile.am  test.cpp
main/TestDisplay/: client.cpp  client.h  xamineDataTypes.h
